--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/main.js",
   "license": "MIT",
+  "author": "Sosuke Hosokawa",
+  "scripts": {
+    "start": "node src/main.js"
+  },
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.14"
   }
 }
