--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node src/main.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
