--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "node src/main.js"
   },
   "dependencies": {
+    "@types/ping": "^0.4.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ping": "^0.4.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.14"
