--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@types/ping": "^0.4.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "ping": "^0.4.2"
+    "ping": "^0.4.2",
+    "wol": "^1.0.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.14"
